--- a/package.json
+++ b/package.json
@@ -21,11 +21,13 @@
   },
   "dependencies": {
     "@pinia/nuxt": "^0.4.11",
+    "@vueup/vue-quill": "^1.2.0",
     "datatables.net-bs5": "^1.13.6",
     "datatables.net-buttons-bs5": "^2.4.2",
     "datatables.net-responsive-bs5": "^2.5.0",
     "datatables.net-select-bs5": "^1.7.0",
     "firebase": "^10.4.0",
-    "pinia": "^2.1.6"
+    "pinia": "^2.1.6",
+    "tinymce": "^6.7.0"
   }
 }
