--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "devDependencies": {
     "@nuxt/devtools": "latest",
     "@nuxtjs/tailwindcss": "^6.8.0",
+    "@types/jquery": "^3.5.22",
     "@vueuse/nuxt": "^10.4.1",
     "nuxt": "^3.7.4",
     "sass": "^1.66.1",
