--- a/package.json
+++ b/package.json
@@ -8,13 +8,15 @@
     "generate": "nuxt generate",
     "preview": "nuxt preview",
     "postinstall": "nuxt prepare",
-    "deploy": "nuxt generate && push-dir --dir=dist --branch=gh-pages --cleanup"
+    "deploy": "gh-pages -d dist"
+
   },
   "devDependencies": {
     "@nuxt/devtools": "latest",
     "@nuxtjs/tailwindcss": "^6.8.0",
     "@types/jquery": "^3.5.22",
     "@vueuse/nuxt": "^10.4.1",
+    "gh-pages": "^6.0.0",
     "nuxt": "^3.7.4",
     "sass": "^1.66.1",
     "sass-loader": "^13.3.2",
