--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -13,12 +13,12 @@ jobs:
       - name: Generate static Nuxt 3 files
         uses: actions/setup-node@v3
         with:
-          node-version: "16"
-          cache: 'yarn'
+          node-version: "18"
+          cache: 'npm'
       
       - run: |
-          yarn install
-          yarn generate
+          npm install
+          npm generate
       - name: Init new repo in $BUILD_FOLDER and commit generated files
         run: |
           grep -rnwl "<link rel=\"prefetch\"" $BUILD_FOLDER | xargs sed -i 's$<link rel="prefetch" href="[^"]*\.\(jpg\|png\|webm\|jpeg\|ttg\|svg\|gif\)">$$g'
