--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@nuxt/devtools": "latest",
     "@nuxtjs/tailwindcss": "^6.8.0",
     "@types/jquery": "^3.5.22",
+    "@types/vue-select": "^3.16.6",
     "@vueuse/nuxt": "^10.4.1",
     "gh-pages": "^6.0.0",
     "nuxt": "^3.7.4",
@@ -32,6 +33,7 @@
     "firebase": "^10.4.0",
     "pinia": "^2.1.6",
     "push-dir": "^0.4.1",
-    "tinymce": "^6.7.0"
+    "tinymce": "^6.7.0",
+    "vue-select": "^4.0.0-beta.6"
   }
 }
