--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   "dependencies": {
     "@pinia/nuxt": "^0.4.11",
     "@vueup/vue-quill": "^1.2.0",
+    "chart.js": "^4.4.0",
     "datatables.net-bs5": "^1.13.6",
     "datatables.net-buttons-bs5": "^2.4.2",
     "datatables.net-responsive-bs5": "^2.5.0",
