--- a/package.json
+++ b/package.json
@@ -20,7 +20,6 @@
     "nuxt": "^3.7.4",
     "sass": "^1.66.1",
     "sass-loader": "^13.3.2",
-    "vue": "^3.3.4",
     "vue-router": "^4.2.5"
   },
   "dependencies": {
@@ -35,6 +34,7 @@
     "pinia": "^2.1.6",
     "push-dir": "^0.4.1",
     "tinymce": "^6.7.0",
+    "vue-barcode": "^1.3.0",
     "vue-select": "^4.0.0-beta.6"
   }
 }
