--- a/package.json
+++ b/package.json
@@ -17,14 +17,13 @@
     "@types/vue-select": "^3.16.6",
     "@vueuse/nuxt": "^10.4.1",
     "gh-pages": "^6.0.0",
-    "nuxt": "^3.7.4",
+    "nuxt": "^3.12.2",
     "sass": "^1.66.1",
     "sass-loader": "^13.3.2",
     "vue-router": "^4.2.5"
   },
   "dependencies": {
     "@pinia/nuxt": "^0.4.11",
-    "@vueup/vue-quill": "^1.2.0",
     "chart.js": "^4.4.0",
     "datatables.net-bs5": "^1.13.6",
     "datatables.net-buttons-bs5": "^2.4.2",
@@ -33,7 +32,9 @@
     "firebase": "^10.4.0",
     "pinia": "^2.1.6",
     "push-dir": "^0.4.1",
-    "tinymce": "^6.7.0",
+    "quill": "^2.0.2",
+    "quill-better-table": "^1.2.10",
+    "tinymce": "^6.8.4",
     "vue-barcode": "^1.3.0",
     "vue-select": "^4.0.0-beta.6"
   }
